[bug][product page]: fix social media icon spacing and btns

--- a/app/assets/stylesheets/redesign/_product.css.scss
+++ b/app/assets/stylesheets/redesign/_product.css.scss
@@ -20,21 +20,14 @@ z.list-group-item.customization-option  {
 		font-size: 1.5rem;
 	}
 
-	.social-media-links {
-		padding-top: 3rem;
+  .btn-customize {
+    text-transform: uppercase;
+  }
 
-		span {
-			float: right;
-			margin-right: 2.4rem;
-			width: 30px;
-			height: 30px;
-      cursor: pointer;
-		}
-
-		.st_facebook_custom {
-			margin-right: 0;
-		}
-	}
+  .btn-secondary {
+    height: 45px;
+    padding: 0;
+  }
 
   .secondary-actions .col-md-6:last-child {
     @media(max-width: 768px){
@@ -42,10 +35,6 @@ z.list-group-item.customization-option  {
       margin-top: 15px;
     }
   }
-}
-
-.product-details *{
-	margin-right: 0;
 }
 
 @media(max-width: 768px){
@@ -61,7 +50,6 @@ z.list-group-item.customization-option  {
 		font-size: 2rem;
     margin-top: 0;
 	}
-
 }
 
 #product-size, #product-color, #product-customizations {
@@ -79,12 +67,14 @@ z.list-group-item.customization-option  {
 }
 
 .btn-customize {
-	border: 1px solid black;
-	width: 100%;
-	height: 4.45rem;
-	color: black;
-	display:block;
-	padding-top: 0.7rem;
+  border: 1px solid black;
+  width: 100%;
+  height: 45px;
+  color: black;
+  display:block;
+  padding-top: 1.5rem;
+  font-size: 12px;
+  line-height: 14px;
 
 	&:hover {
 		color: black;
@@ -93,7 +83,7 @@ z.list-group-item.customization-option  {
 	&:after {
 		content: '+';
 		position: absolute;
-		right: 15px;
+		right: 5px;
 	}
 }
 
@@ -219,7 +209,6 @@ z.list-group-item.customization-option  {
   .col-md-6:last-child {
     padding-left:10px;
   }
-
 }
 
 #product-overlay {
@@ -414,7 +403,7 @@ z.list-group-item.customization-option  {
       margin:0;
 
       .btn {
-        padding:10px 15px;
+        padding: 6px 15px;
         outline: none;
       }
     }
@@ -432,4 +421,10 @@ z.list-group-item.customization-option  {
   #slides img.product-image-slide {
     left: -35% !important;
   }
+}
+
+.buy-button {
+  height: 45px;
+  line-height: 45px;
+  line-height: 9px;
 }
